fixing about image on mobile hopefully

--- a/src/src/app/about/about.component.css
+++ b/src/src/app/about/about.component.css
@@ -97,6 +97,7 @@
   /* The image used*/
   /* Set a specific height */
   max-height: 40%;
+  width: auto;
   /*border: 1px solid black;*/
   background-size: 100%;
 }
