--- a/src/src/app/landing/landing.component.css
+++ b/src/src/app/landing/landing.component.css
@@ -1,3 +1,10 @@
+@media only screen and (max-width: 600px) {
+  .intro {
+    background-image: url("/../assets/images/projects/THEONE.jpg") !important;
+  }
+
+}
+
 .intro{
   display: flex;
   width: 100%;
